--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -38,18 +38,27 @@
   </c-card-footer> -->
   </div>
 
-  <div class="col-4">
-    <app-charts/>
+  <div class="col-4"><br/>
+    <!-- <app-charts/> -->
+    <div class="col">
+      <app-tablewiget2/>
+    </div>
+
+    <div class="col">
+      <br/>
+      <app-tablewiget3/>
+    </div>
+
   </div>
 
 </div><br/>
 
 <div class="row">
   <div class="col-6">
-    <app-tablewiget2/>
+    
   </div>
   <div class="col-6">
-    <app-tablewiget3/>
+    
   </div>
   
 </div>
