--- a/src/app/views/dashboard/tablewiget3/tablewiget3.component.html
+++ b/src/app/views/dashboard/tablewiget3/tablewiget3.component.html
@@ -1,7 +1,7 @@
 <c-card class="shadow-sm" >
     <c-card-header>
         <div style="display: flex; justify-content: space-between; align-items: center;">
-            <strong style="margin-right: auto;">รายละเอียดครุภัฑณ์ล่าสุด3</strong>
+            <strong style="margin-right: auto;" style="color: green;">รายละเอียดครุภัฑณ์ล่าสุด3</strong>
         </div>
     </c-card-header>
 
